# ADS

./: .gitignore
language_of_programming/: .gitignore  exercicio_unidade_1.py
language_of_programming/exercicio_unidade_2/: exercicio_unidade_2.py
language_of_programming/exercicio_unidade_3/: dados_vendas.db  exercicio_unidade_3.py  readme.md
linguagem_de_programção/exercicio_unidade_2/: exercicio_unidade_2.py  pyproject.toml
linguagem_de_programção/exercicio_unidade_3/: dados_vendas.db  exercicio_unidade_3.py  pyproject.toml  readme.md
projeto_integrado_inovação/: controle_de_accesso.py  fifo_algoritmo.py  main.py  pseudo_codigo_fifo.txt  pyproject.toml  readme.md
