[project]
name = "projeto-integrado-inovação"
version = "0.1.0"
description = ""
authors = [
    {name = "weslenpy",email = "weslenjhony@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
