[project]
name = "adsexercicios"
version = "0.1.0"
package-mode=false
description = "Exercicio para exploração de recursos do python"
authors = [
    {name = "weslenpy",email = "weslenjhony@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
